--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
 <h3>User</h3>
+<%= image_tag @user.image %>
 <p>User: <%= @user.name %></p>
 <p>Email: <%= @user.email if @user.email %></p>
+<p> Timezone: <%= @user.timezone if @user.timezone %></p>
